--- a/public/signin.html
+++ b/public/signin.html
@@ -3,110 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redirecting to Sign In - RBS</title>
-    <meta http-equiv="refresh" content="0; url=signin.html" />
-    <link rel="canonical" href="signin.html" />
-  </head>
-  <body>
-    <nav>
-      <a href="index.html">
-        <div class="logo">
-          <img
-            id="logo"
-            src="./Images/RBS Logo main.svg"
-            alt="RBS Logo. It's a box that's red"
-          />
-        </div>
-      </a>
-      <div class="burger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
+    <title>Sign In - Red Box Software</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="./Images/RBS Favicon.ico" type="image/x-icon" />
+    <style>
+      .signin-container {
+        max-width: 400px;
+        margin: 100px auto;
+        padding: 40px;
+        background: white;
+        border-radius: 10px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        text-align: center;
+      }
 
-      <div id="webNav">
-        <div id="navBtnsCont" class="nav-links">
-          <a href="index.html"><li>Home</li></a>
-          <a href="projects.html"><li>Projects</li></a>
-          <a href="products.html"><li>Products</li></a>
-          <a href="services.html"><li>Services</li></a>
-          <a href="articles.html"><li>Articles</li></a>
-          <a href="about.html"><li>About</li></a>
-          <a href="contact.html"><li>Contact</li></a>
-          <div class="tools-dropdown">
-            <li>More ▼</li>
-            <div class="tools-dropdown-content">
-              <a href="clip_path_editor.html">Clip Path Editor</a>
-              <a href="cubic_bezier.html">Cubic Bezier</a>
-              <a href="base64.html">Base64 image encoder - decoder</a>
-              <a href="kanban.html">Kanban Task Manager</a>
-              <a href="qr_code_generator.html">QR code generator</a>
-              <a href="custom-document-signing.html">Document Signing</a>
-            </div>
-          </div>
+      .logo {
+        max-width: 150px;
+        margin-bottom: 30px;
+      }
 
-          <a href="admin.html" style="display: none"><li>Admin</li></a>
-          <li>
-            <button
-              onclick="handleSignOut()"
-              class="sign-out-btn"
-              style="display: none"
-            >
-              Sign Out
-            </button>
-          </li>
+      .signin-form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
 
-          <br />
-          <br />
-          <br />
-        </div>
-      </div>
-      <div class="dropdown-content">
-        <div id="navBtnsCont" class="nav-links">
-          <a href="index.html"><li>Home</li></a>
-          <a href="projects.html"><li>Projects</li></a>
-          <a href="products.html"><li>Products</li></a>
-          <a href="services.html"><li>Services</li></a>
-          <a href="articles.html"><li>Articles</li></a>
-          <a href="about.html"><li>About</li></a>
-          <a href="contact.html"><li>Contact</li></a>
-          <div class="tools-dropdown">
-            <li>More ▼</li>
-            <div class="tools-dropdown-content">
-              <a href="clip_path_editor.html">Clip Path Editor</a>
-              <a href="cubic_bezier.html">Cubic Bezier</a>
-              <a href="base64.html">Base64 image encoder - decoder</a>
-              <a href="kanban.html">Kanban Task Manager</a>
-              <a href="qr_code_generator.html">QR code generator</a>
-              <a href="custom-document-signing.html">Document Signing</a>
-            </div>
-          </div>
+      .form-group {
+        text-align: left;
+      }
 
-          <a href="admin.html" style="display: none"><li>Admin</li></a>
-          <li>
-            <button
-              onclick="handleSignOut()"
-              class="sign-out-btn"
-              style="display: none"
-            >
-              Sign Out
-            </button>
-          </li>
-        </div>
-      </div>
-      <div id="shadow"></div>
-    </nav>
-
-    <p>Redirecting to the main sign in page...</p>
-    <script>
-      // Preserve any redirect parameter
-      const urlParams = new URLSearchParams(window.location.search);
-      const redirect = urlParams.get('redirect');
-      const newUrl = redirect ? `signin.html?redirect=${encodeURIComponent(redirect)}` : 'signin.html';
-      window.location.replace(newUrl);
-    </script>
-  </body>
-</html>
+      .form-group label {
         display: block;
         margin-bottom: 8px;
         font-weight: 600;
@@ -226,22 +152,6 @@
         border: 1px solid #bee5eb;
       }
 
-      .signup-link {
-        margin-top: 20px;
-        font-size: 14px;
-        color: #666;
-      }
-
-      .signup-link a {
-        color: #007bff;
-        text-decoration: none;
-        font-weight: 600;
-      }
-
-      .signup-link a:hover {
-        text-decoration: underline;
-      }
-
       .back-link {
         position: absolute;
         top: 20px;
@@ -256,30 +166,6 @@
 
       .back-link:hover {
         text-decoration: underline;
-      }
-
-      .features-info {
-        background: #f8f9fa;
-        padding: 20px;
-        border-radius: 8px;
-        margin-top: 30px;
-        text-align: left;
-      }
-
-      .features-info h3 {
-        margin-top: 0;
-        color: #333;
-        font-size: 18px;
-      }
-
-      .features-info ul {
-        margin: 10px 0;
-        padding-left: 20px;
-      }
-
-      .features-info li {
-        margin-bottom: 8px;
-        color: #666;
       }
 
       .loading {
@@ -315,6 +201,30 @@
         100% {
           transform: rotate(360deg);
         }
+      }
+
+      .features-info {
+        background: #f8f9fa;
+        padding: 20px;
+        border-radius: 8px;
+        margin-top: 30px;
+        text-align: left;
+      }
+
+      .features-info h3 {
+        margin-top: 0;
+        color: #333;
+        font-size: 18px;
+      }
+
+      .features-info ul {
+        margin: 10px 0;
+        padding-left: 20px;
+      }
+
+      .features-info li {
+        margin-bottom: 8px;
+        color: #666;
       }
 
       @media (max-width: 480px) {
@@ -430,9 +340,9 @@
     <div class="signin-container">
       <img src="Images/RBS Logo main.svg" alt="Red Box Software" class="logo" />
 
-      <h1>DocuSeal Access</h1>
+      <h1>Sign In</h1>
       <p style="color: #666; margin-bottom: 30px">
-        Sign in to access document signing and management tools
+        Access your Red Box Software account and services
       </p>
 
       <div id="messageContainer"></div>
@@ -491,31 +401,32 @@
         Continue with Google
       </button>
 
-      <div class="signup-link">
-        Need an account?
-        <a href="#" onclick="showSignupInfo()">Request Access</a>
-      </div>
-
       <div class="features-info">
-        <h3>🔐 What you can do with DocuSeal:</h3>
-        <ul>
-          <li>Create and send documents for electronic signature</li>
-          <li>Track signing progress in real-time</li>
-          <li>Manage document templates</li>
-          <li>Send automated reminders to signers</li>
-          <li>Access completed documents securely</li>
-        </ul>
-      </div>
+        <div
+          style="
+            background: #fff3cd;
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            border-left: 4px solid #ffc107;
+          "
+        >
+          <h4 style="margin: 0 0 10px 0; color: #856404">
+            📝 For Local Development
+          </h4>
+          <p style="margin: 0; color: #856404; font-size: 14px">
+            If Google Sign-In doesn't work on localhost, use email/password
+            authentication below, or add your localhost domain to Firebase
+            Console → Authentication → Settings → Authorized domains.
+          </p>
+        </div>
 
-      <!-- Development Environment Notice -->
-      <div
-        id="devNotice"
-        style="display: none"
-        class="message info"
-        style="margin-top: 20px"
-      >
-        <strong>Development Mode:</strong> Google Sign-In may not work on
-        localhost. Use email/password sign-in for local testing.
+        <h3>🚀 What you can access:</h3>
+        <ul>
+          <li>DocuSeal - Document signing and management</li>
+          <li>Project Management Tools</li>
+          <li>Exclusive features and content</li>
+        </ul>
       </div>
     </div>
 
@@ -532,16 +443,6 @@
         GoogleAuthProvider,
         onAuthStateChanged,
       } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-auth.js";
-      import {
-        getFirestore,
-        doc,
-        getDoc,
-        setDoc,
-        collection,
-        query,
-        where,
-        getDocs,
-      } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-firestore.js";
 
       // Use the configuration from the external file
       if (!window.firebaseConfig) {
@@ -554,77 +455,20 @@
 
       const app = initializeApp(window.firebaseConfig);
       const auth = getAuth(app);
-      const db = getFirestore(app);
       const googleProvider = new GoogleAuthProvider();
 
-      // Check if we're in development environment
-      const isDevelopment =
-        location.hostname === "localhost" ||
-        location.hostname === "127.0.0.1" ||
-        location.hostname === "";
-
-      if (isDevelopment) {
-        document.getElementById("devNotice").style.display = "block";
-      }
-
-      // Helper function to check user access
-      async function checkUserAccess(user) {
-        try {
-          // Admin always has access
-          if (user.email === "stiaan44@gmail.com") {
-            return true;
-          }
-
-          // Check if user has DocuSeal access
-          // First try to get user document by UID
-          let userDoc = await getDoc(doc(db, "users", user.uid));
-          let userData = userDoc.data();
-
-          // If no document found by UID, try to find by email
-          if (!userData) {
-            const userQuery = query(
-              collection(db, "users"),
-              where("email", "==", user.email)
-            );
-            const userSnapshot = await getDocs(userQuery);
-
-            if (!userSnapshot.empty) {
-              userData = userSnapshot.docs[0].data();
-              // Create a document with UID as well for future quick access
-              await setDoc(doc(db, "users", user.uid), {
-                ...userData,
-                uid: user.uid,
-                email: user.email,
-                updatedAt: new Date(),
-              });
-            }
-          }
-
-          return userData && userData.docusealAccess === true;
-        } catch (error) {
-          console.error("Error checking user access:", error);
-          return false;
-        }
-      }
+      // Get redirect URL from query parameters or default to previous page
+      const urlParams = new URLSearchParams(window.location.search);
+      const redirectUrl =
+        urlParams.get("redirect") || document.referrer || "index.html";
 
       // Check if user is already signed in
       onAuthStateChanged(auth, async (user) => {
         if (user) {
-          showLoading();
-
-          const hasAccess = await checkUserAccess(user);
-
-          if (hasAccess) {
-            // User has access, redirect to DocuSeal
-            window.location.href = "docuseal.html";
-          } else {
-            // User doesn't have access, show message
-            showMessage(
-              "Your account does not have DocuSeal access. Please contact support for assistance.",
-              "error"
-            );
-            hideLoading();
-          }
+          showMessage("You're already signed in! Redirecting...", "success");
+          setTimeout(() => {
+            window.location.href = redirectUrl;
+          }, 1500);
         }
       });
 
@@ -655,21 +499,14 @@
             );
             const user = userCredential.user;
 
-            // Check DocuSeal access
-            const hasAccess = await checkUserAccess(user);
+            showMessage("Sign in successful! Redirecting...", "success");
 
-            if (hasAccess) {
-              showMessage("Sign in successful! Redirecting...", "success");
-              setTimeout(() => {
-                window.location.href = "docuseal.html";
-              }, 1500);
-            } else {
-              showMessage(
-                "Your account does not have DocuSeal access. Please contact support.",
-                "error"
-              );
-              await auth.signOut();
-            }
+            // Store user email for admin checks
+            localStorage.setItem("userEmail", user.email);
+
+            setTimeout(() => {
+              window.location.href = redirectUrl;
+            }, 1500);
           } catch (error) {
             console.error("Sign in error:", error);
             let errorMessage = "Sign in failed. Please try again.";
@@ -714,21 +551,14 @@
             const result = await signInWithPopup(auth, googleProvider);
             const user = result.user;
 
-            // Check DocuSeal access
-            const hasAccess = await checkUserAccess(user);
+            showMessage("Sign in successful! Redirecting...", "success");
 
-            if (hasAccess) {
-              showMessage("Sign in successful! Redirecting...", "success");
-              setTimeout(() => {
-                window.location.href = "docuseal.html";
-              }, 1500);
-            } else {
-              showMessage(
-                "Your account does not have DocuSeal access. Please contact support.",
-                "error"
-              );
-              await auth.signOut();
-            }
+            // Store user email for admin checks
+            localStorage.setItem("userEmail", user.email);
+
+            setTimeout(() => {
+              window.location.href = redirectUrl;
+            }, 1500);
           } catch (error) {
             console.error("Google sign in error:", error);
             let errorMessage = "Google sign in failed. Please try again.";
@@ -740,10 +570,11 @@
             } else if (
               error.code === "auth/unauthorized-domain" ||
               error.message.includes("requests-from-referer") ||
-              error.message.includes("are-blocked")
+              error.message.includes("are-blocked") ||
+              error.message.includes("domain")
             ) {
               errorMessage =
-                "Local development domain not authorized. Please use email/password sign in or contact support to configure the development environment.";
+                "🔒 Local development domain not authorized for Google Sign-In. Please use email/password sign in below, or add your localhost domain to Firebase Console > Authentication > Settings > Authorized domains.";
             } else if (error.code === "auth/popup-blocked") {
               errorMessage =
                 "Popup was blocked by your browser. Please allow popups for this site or use email/password sign in.";
@@ -775,14 +606,6 @@
       function hideLoading() {
         document.getElementById("loading").classList.remove("show");
       }
-
-      // Make functions globally available
-      window.showSignupInfo = function () {
-        showMessage(
-          "To request DocuSeal access, please contact support at support@redboxsoftware.com with your name and organization details.",
-          "info"
-        );
-      };
     </script>
   </body>
 </html>
